--- a/src/style.scss
+++ b/src/style.scss
@@ -3,7 +3,7 @@ $secondary: #fff;
 $font-family: Helvetica, Arial, sans-serif;
 
 body {
-    background: #191414;
+    background: #242020;
     font-family: $font-family;
     font-size: 16px;
 }
@@ -49,8 +49,7 @@ p {
 }
 
 .home-logo {
-    max-width: 100%;
-    width: 15%;
+    max-width: 100px;
     display: block;
     margin: 0 auto;
 }
@@ -74,5 +73,29 @@ p {
         flex-direction: column;
         align-items: center;
         margin-bottom: 30px;
+    }
+}
+
+.showErrorMsg {
+    display: none;
+    margin: 0 auto;
+    max-width: 500px;
+
+    .errorMsgTitle {
+        margin: 0;
+        padding: 15px 0;
+        border: 1px rgb(165, 44, 44) solid;
+        font-weight: bold;
+        font-size: 1.2rem;
+        text-align: center;
+        background: rgb(165, 44, 44);
+    }
+
+    .errorMsgContent {
+        text-align: center;
+        padding: 30px 0;
+        margin: 0;
+        border: #fff solid 1px;
+        border-top: 0px none;
     }
 }
